# ESM_mutation_score

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
esm_mutscan/: __main__.py
esm_mutscan/models/: esm_wrapper.py  mutation_generator.py
esm_mutscan/scripts/: embed_sequences.py  find_max_batch.py  ml_train.py  predict_affinity.py  run_mutscan.py
examples/: run_pipeline.sh  sample_input.csv  targets.csv  test.ipynb
src/esm_mutation_score.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/esm_mutation_score/cli/: embed.py
tests/: test_embedder.py  test_embedding.py  test_mutation.py  test_mutgen.py  test_trainer.py
