[project]
name = "esm_mutation_score"
version = "0.1.0"
description = "Library for ESM-based antibody mutation scoring and prediction"
authors = [
  { name = "Shawn Shen", email = "ys.shawn25@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "torch>=1.10",
  "transformers>=4.25",
  "numpy",
  "pandas",
  "scikit-learn",
  "tqdm"
]
[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]

[project.urls]
Homepage = "https://github.com/yshen25/ESM_mutation_score"

[project.scripts]
esm-mutate = "esm_mutation_score.cli.main:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
